syntax = "proto3";

package pb;

service UserService {
  rpc EnsurePending(EnsurePendingRequest) returns (EnsurePendingResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc ActivateUser(ActivateUserRequest) returns (ActivateUserResponse);
  rpc CreateStaff(CreateStaffRequest) returns (CreateStaffResponse);
  rpc GetPermissionsByRoleId(GetPermissionsByRoleIdRequest) returns (GetPermissionsByRoleIdResponse);
  rpc GetRoleByName(GetRoleByNameRequest) returns (GetRoleByNameResponse);
  rpc GetUserWithRoleByEmail(GetUserWithRoleByEmailRequest) returns (GetUserWithRoleByEmailResponse);
}

message EnsurePendingRequest {
  string email = 1;
  string name = 2;
  string password = 3;
  string role_id = 4;
  string address = 5;
}

message EnsurePendingResponse {
  string id = 1;
  bool created = 2;
}

message GetUserByEmailRequest { string email = 1; }

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string status = 4;
  string role_id = 5;
  string password = 6; // hashed
}

message GetUserByEmailResponse {
  bool found = 1;
  User user = 2;
}

message ActivateUserRequest { string email = 1; }
message ActivateUserResponse { bool success = 1; }

message CreateStaffRequest {
  string email = 1;
  string name = 2;
  string password = 3;
  string role_id = 4;
  string address = 5;
  string phone_number = 6;
  string gender = 7;
  string dob = 8;
}

message CreateStaffResponse {
  string id = 1;
  bool created = 2;
  string message = 3;
}

message GetPermissionsByRoleIdRequest {
  string role_id = 1;
}

message Permission {
  string id = 1;
  string name = 2;
  string code = 3;
  string description = 4;
}

message GetPermissionsByRoleIdResponse {
  repeated Permission permissions = 1;
  bool success = 2;
  string message = 3;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdResponse {
  bool found = 1;
  User user = 2;
}

message GetRoleByNameRequest {
  string name = 1;
}

message GetRoleByNameResponse {
  bool found = 1;
  string id = 2;
}

message GetUserWithRoleByEmailRequest {
  string email = 1;
}

message UserWithRole {
  string id = 1;
  string email = 2;
  string name = 3;
  string role_name = 4;
  string role_id = 5;
}

message GetUserWithRoleByEmailResponse {
  bool found = 1;
  UserWithRole user = 2;
}